--- a/fitbook/app/src/main/res/values/strings.xml
+++ b/fitbook/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Fitbook</string>
     <string name="title_activity_drawer">DrawerActivity</string>
+    <string name="title_activity_home_detail">Chi tiết bài tập</string>
+    <string name="title_activity_home_reschedule">Lên lịch bài tập</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -8,12 +10,20 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
+    <string name="menu_home">Trang chủ</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_about">Giới thiệu</string>
     <string name="menu_settings">Cài đặt</string>
     <string name="menu_logout">Đăng xuất</string>
+
+    <!-- Home, ExerciseDetail Fragments -->
+    <string name="exercise_detail_description_title">Mô tả bài tập</string>
+    <string name="exercise_detail_steps_title">Các bước thực hiện</string>
+    <string name="activity_home_reschedule_tv_duration">Vòng lặp (phút)</string>
+    <string name="activity_home_reschedule_tv_time">Thời gian</string>
+    <string name="activity_home_reschedule_tv_date">Ngày</string>
+    <string name="activity_home_reschedule_save_btn">Lưu lịch</string>
 
     <!-- General -->
     <string name="gender_male">Nam</string>
