--- a/fitbook/app/src/main/res/values/strings.xml
+++ b/fitbook/app/src/main/res/values/strings.xml
@@ -43,8 +43,8 @@
     <string name="gender_male">Nam</string>
     <string name="gender_female">Nữ</string>
     <string name="date_format">dd/MM/yyyy</string>
-    <string name="time_format">HH:mm aa</string>
-    <string name="date_time_format">dd/MM/yyyy HH:mm aa</string>
+    <string name="time_format">HH:mm</string>
+    <string name="date_time_format">dd/MM/yyyy HH:mm</string>
     <string name="date_time_format_upload_image_name">dd-MM-yyyy-HH-mm-ss</string>
     <string name="date_format_db">dd.MM.yyyy</string>
     <string name="date_picker_default_title">Chọn Ngày</string>
